# Bengi

./: .gitignore  .travis.yml  Bengi Instructions.txt  Bengi.sln  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  instruction_format.txt  set_cmake_dbg.sh  set_cmake_rel.sh  travis.yml
Bengi/: ArgParser.cpp  ArgParser.h  Bengi.vcxproj  Bengi.vcxproj.filters  Error.cpp  Error.h  IOFile.cpp  IOFile.h  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  Usage.cpp  Usage.h  VM.cpp  VM.h  Version.cpp  Version.h  main.cpp  utils.h
Bengi/Bengi/: ArgParser.cpp  ArgParser.h  Bengi.vcxproj  Bengi.vcxproj.filters  IOFile.cpp  IOFile.h  Usage.h  VM.cpp  VM.h  Version.cpp  Version.h  main.cpp
BengiDLL/: BengiDLL.cpp  BengiDLL.vcxproj.filters
BengiLIB/BengiDLL/: BengiDLL.cpp  BengiDLL.vcxproj  BengiDLL.vcxproj.filters
BengiLIB/BengiSO/: Bengi.cc  Makefile
BengiTest/: BengiTest.vcxproj  BengiTest.vcxproj.filters  BengiUnitTest.vcxproj.filters  bengitest.cpp  catch.hpp  main.cpp  stdafx.cpp  stdafx.h  targetver.h
BengiUnitTest/: BengiUnitTest.vcxproj  BengiUnitTest.vcxproj.filters  Makefile  main.cpp
basm/: Makefile
misc/: instruction_format.txt
src/assembler/: CMakeLists.txt
src/assembler/basm/: assembler.cpp  assembler.h  lexer.cpp  lexer.h  main.cpp
src/tests/: data.h  (+2 more)
src/vm/: CMakeLists.txt
src/vm/bengi/: bytecode.cpp  bytecode.h  main.cpp  version.h  vm.cpp  vm.h
tests/: ben.py  bengi.py  compile.py  dbg.py  test1.basm  test1.cben  test2.basm  test3.basm  test3.cben  test4.basm  test4.cben  test5.basm  test5.cben  test6.basm  test6.cben  test7.basm
(+33 files in other folders)
